データ取得と読み込みまで
控え選手とかの編集ができないのでそこらへんが課題

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "fmt": "prettier . --write"
+    "fmt": "prettier . --write",
+    "fetch-teams": "node scripts/fetchTeamData.js",
+    "fetch-players": "node scripts/fetchPlayerData.js"
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
