--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,16 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# API設定ファイル（機密情報）
+config.js
+
+# 環境変数ファイル
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+public/data/*
+!public/data/.gitkeep
